# indpensim-py

./: .gitignore  README.md  VALIDATION.md  pyproject.toml
data/matlab_reference/: batch_seed101_b01_initconds.mat  batch_seed101_b01_meta.json  batch_seed101_b01_states.csv  batch_seed102_b01_initconds.mat  batch_seed102_b01_meta.json  batch_seed102_b01_states.csv  batch_seed103_b01_initconds.mat  batch_seed103_b01_meta.json  batch_seed103_b01_states.csv  batch_seed201_b01_initconds.mat  batch_seed201_b01_meta.json  batch_seed201_b01_states.csv  batch_seed202_b01_initconds.mat  batch_seed202_b01_meta.json  batch_seed202_b01_states.csv  batch_seed203_b01_initconds.mat  batch_seed203_b01_meta.json  batch_seed203_b01_states.csv  batch_seed204_b01_initconds.mat  batch_seed204_b01_meta.json  batch_seed204_b01_states.csv  batch_seed205_b01_initconds.mat  batch_seed205_b01_meta.json  batch_seed205_b01_states.csv  batch_seed207_b01_initconds.mat  batch_seed207_b01_meta.json  batch_seed207_b01_states.csv  (+13 more)
docs/: matlab_reference_capture.md  parameters.md  pls_model.md  state_vector.md
indpensim/: __init__.py  driver.py  simulation.py
indpensim/ode/: rhs.py  (+1 more)
scripts/: inspect_pls_mat.py  inspect_reference.py  matlab_capture_validation_batch.m  matlab_capture_with_x0.m  matlab_dump_paa_pred.m  matlab_dump_reference.m  matlab_run_validation_set.m
tests/: test_controller.py  test_driver.py  test_ode_rhs.py  test_parameters.py  test_pid.py  test_playback.py  test_pls_model.py  test_raman.py  test_simulation.py  test_streaming.py  test_substrate.py  test_validation_multiseed.py
(+13 files in other folders)
