[project]
name = "indpensim"
version = "0.1.0dev"
description = "Python port of IndPenSim V2.02 industrial penicillin fermentation simulator"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "matplotlib>=3.8",
]
mqtt = [
    "paho-mqtt>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indpensim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
